feat: complete last.fm and fanart integrations (#17)
